--- a/check.html
+++ b/check.html
@@ -57,40 +57,52 @@
       </nav>
   </header>
 <!-- Main Content -->
+<!-- Main Content -->
 <main id="app">
     <!-- Heading -->
     <section class="check-cashing-section">
-      <h1>Check Cashing Services at Madison Variety</h1>
-      <p>Need to cash a check? We make it fast and easy! Visit us today to get your checks cashed conveniently.</p>
+      <!-- Content Wrapper -->
+      <div class="content-wrapper">
+        <!-- Text Content -->
+        <div class="text-content">
+          <h1>Check Cashing Services at Madison Variety</h1>
+          <p>Need to cash a check? We make it fast and easy! Visit us today to get your checks cashed conveniently.</p>
 
-      <!-- Requirements -->
-      <div class="requirements">
-        <h2>What You Need to Cash a Check:</h2>
-        <ul class="requirements-list">
-          <li>A valid government-issued ID (e.g., driver's license)</li>
-          <li>A passport (if applicable)</li>
-          <li>The check you want to cash (must be valid and endorsed)</li>
-          <li>Proof of address (if required)</li>
-        </ul>
-      </div>
+          <!-- Requirements -->
+          <div class="requirements">
+            <h2><u>What You Need to Cash a Check:</u></h2>
+            <ul class="requirements-list">
+              <li>A valid government-issued ID (e.g., driver's license)</li>
+              <li>A passport (if applicable)</li>
+              <li>The check you want to cash (must be valid and endorsed)</li>
+              <li>Proof of address (if required)</li>
+            </ul>
+          </div>
 
-      <!-- Benefits -->
-      <div class="benefits">
-        <h2>Why Choose Madison Variety for Check Cashing?</h2>
-        <ul class="benefits-list">
-          <li><strong>Convenient:</strong> Located in the heart of Freehold, NJ.</li>
-          <li><strong>Fast Service:</strong> Get your money quickly without hassle.</li>
-          <li><strong>Friendly Staff:</strong> Our team is here to help you every step of the way.</li>
-          <li><strong>No Hidden Fees:</strong> Transparent pricing for all services.</li>
-        </ul>
+          <!-- Benefits -->
+          <div class="benefits">
+            <h2>Why Choose Madison Variety for Check Cashing?</h2>
+            <ul class="benefits-list">
+              <li><strong>Convenient:</strong> Located in the heart of Freehold, NJ.</li>
+              <li><strong>Fast Service:</strong> Get your money quickly without hassle.</li>
+              <li><strong>Friendly Staff:</strong> Our team is here to help you every step of the way.</li>
+              <li><strong>No Hidden Fees:</strong> Transparent pricing for all services.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Image Content -->
+     <!-- Image Content -->
+     <div class="image-content">
+        <!-- Stock Image -->
+        <img src="\pfp\check.jpg" alt="Check Cashing Service Image" class="check-image">
       </div>
+    </div>
 
     </section>
 
-    <!-- Footer -->
-    <footer>
-      © 2025 Madison Variety. All rights reserved.
-    </footer>
+   <script src="\java\nicotine2.js"></script>
+
 
   </main>
 
