--- a/ourstory.html
+++ b/ourstory.html
@@ -36,6 +36,8 @@
                  <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
             </div>
         </div>
+        <main id="app">
+
         <div class="date">
             <p id="clock">March 07, 2025 | 10:37:31</p>
         </div>
@@ -102,7 +104,8 @@
             </div>
         </section>
     </main>
-    <script src="\java\script.js"></script>
+    
+    <script src="\java\nicotine2.js"></script>
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
