--- a/check.html
+++ b/check.html
@@ -32,9 +32,9 @@
 
       </div>
       <div class="contact-info">
-        <p>For more inquiries, call us:+1 (732) 679-4181</p>
-        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@aol.com&su=SUBJECT" target="_blank">dolfinsnfl@aol.com</p></a>        <p>3062 US-9, Old Bridge, NJ
-          08857</p>
+        <p>For more inquiries, call us: <a href="">+1 (732) 679-4181 </a></p>
+        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@aol.com&su=SUBJECT" target="_blank"><b>dolfinsnfl@aol.com</b></p></a>
+         <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank"><b>3062 US-9, Old Bridge, NJ 08857</b></p></a>
       </div>
     </div>
       <div class="date">
@@ -81,7 +81,7 @@
 
           <!-- Benefits -->
           <div class="benefits">
-            <h2>Why Choose Madison Variety for Check Cashing?</h2>
+            <h2><u>Why Choose Madison Variety for Check Cashing?</u></h2>
             <ul class="benefits-list">
               <li><strong>Convenient:</strong> Located in the heart of Freehold, NJ.</li>
               <li><strong>Fast Service:</strong> Get your money quickly without hassle.</li>
