--- a/nicotine.html
+++ b/nicotine.html
@@ -15,7 +15,9 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+            <a href="..\index.html">
+                <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+            </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Monday - Friday : 5:00 AM <strong>-</strong> 7:00 PM</p>
@@ -24,10 +26,9 @@
 
             </div>
             <div class="contact-info">
-                <p>For more inquiries, call us: +1 (732) 679-4181</p>
-                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@aol.com&su=SUBJECT" target="_blank">dolfinsnfl@aol.com</p></a>
-                <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
-                        08857</p></a>
+                <p>For more inquiries, call us: <a href="">+1 (732) 679-4181 </a></p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@aol.com&su=SUBJECT" target="_blank"><b>dolfinsnfl@aol.com</b></p></a>
+                 <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank"><b>3062 US-9, Old Bridge, NJ 08857</b></p></a>
             </div>
         </div>
             <div class="date">
