--- a/check.html
+++ b/check.html
@@ -83,7 +83,7 @@
           <div class="benefits">
             <h2><u>Why Choose Madison Variety for Check Cashing?</u></h2>
             <ul class="benefits-list">
-              <li><strong>Convenient:</strong> Located in the heart of Freehold, NJ.</li>
+              <li><strong>Convenient:</strong> Located in the heart of Old Bridge, NJ.</li>
               <li><strong>Fast Service:</strong> Get your money quickly without hassle.</li>
               <li><strong>Friendly Staff:</strong> Our team is here to help you every step of the way.</li>
               <li><strong>No Hidden Fees:</strong> Transparent pricing for all services.</li>
@@ -95,7 +95,7 @@
      <!-- Image Content -->
      <div class="image-content">
         <!-- Stock Image -->
-        <img src="\pfp\check.jpg" alt="Check Cashing Service Image" class="check-image">
+        <img src="pfp\check.jpg" alt="Check Cashing Service Image" class="check-image">
       </div>
     </div>
 
