most of snack done

--- a/drinks.html
+++ b/drinks.html
@@ -55,7 +55,7 @@
     </header>
 
     <!-- Drinks Section -->
-    <div class="drinks-section">
+    <div class="drinks-section container">
         <div class="drinks-header">
             <h1>DRINKS SELECTION</h1>
             <p>Choose from our wide variety of refreshing beverages. Click on options below each drink to view different variants.</p>
