--- a/drinks.html
+++ b/drinks.html
@@ -46,7 +46,7 @@
             <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
             <a href="lottery.html" class="nav-item">Lottery</a>
             <a href="check.html" class="nav-item">Check Cashing</a>
-            <a href="social-area.html" class="nav-item">Social Area</a>
+            <a href="newspapers.html" class="nav-item">Newspapers</a>
             <a href="snacks.html" class="nav-item">Snacks</a>
             <a href="drinks.html" class="nav-item">Drinks</a>
             <a href="nicotine.html" class="nav-item">Nicotine Products</a>
