--- a/nicotine.html
+++ b/nicotine.html
@@ -39,14 +39,14 @@
         <header>
             <nav class="text-nav">
                 <a href="ourstory.html" class="nav-item">Our Story</a>
-                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
-                    <a href="lottery.html" class="nav-item">Lottery</a>
-                    <a href="check.html" class="nav-item">Check Cashing</a>
-                    <a href="social-area.html" class="nav-item">Social Area</a>
-                    <a href="snacks.html" class="nav-item">Snacks</a>
-                    <a href="drinks.html" class="nav-item">Drinks</a>
-                    <a href="nicotine.html" class="nav-item">Nicotine Products</a>
-                    <a href="stamps.html" class="nav-item">Stamps</a>
+                <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                <a href="lottery.html" class="nav-item">Lottery</a>
+                <a href="check.html" class="nav-item">Check Cashing</a>
+                <a href="newspapers.html" class="nav-item">Newspapers</a>
+                <a href="snacks.html" class="nav-item">Snacks</a>
+                <a href="drinks.html" class="nav-item">Drinks</a>
+                <a href="nicotine.html" class="nav-item">Nicotine Products</a>
+                <a href="stamps.html" class="nav-item">Stamps</a>
             </nav>
         </header>
     </header>
