commit commit  commit

--- a/ourstory.html
+++ b/ourstory.html
@@ -51,7 +51,6 @@
                 <a href="snacks.html" class="nav-item">Snacks</a>
                 <a href="drinks.html" class="nav-item">Drinks</a>
                 <a href="nicotine.html" class="nav-item">Nicotine Products</a>
-                <a href="stamps.html" class="nav-item">Stamps</a>
                 
             </nav>
         </header>
@@ -106,6 +105,8 @@
     </main>
     
     <script src="\java\nicotine2.js"></script>
+    <script src="lottery2.js"></script>
+
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
