--- a/snacks.html
+++ b/snacks.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Madison Variety - Drinks Selection</title>
+    <title>Snacks - Madison Variety</title>
     <link rel="stylesheet" href="css\snack.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
@@ -60,7 +60,6 @@
                     <a href="snacks.html" class="nav-item">Snacks</a>
                     <a href="drinks.html" class="nav-item">Drinks</a>
                     <a href="nicotine.html" class="nav-item">Nicotine Products</a>
-                    <a href="stamps.html" class="nav-item">Stamps</a>
         </nav>
     </header>
 
