--- a/check.html
+++ b/check.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lottery - Madison Variety</title>
+  <title>Check Cashing - Madison Variety</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
   <link rel="stylesheet" href="css\check.css">
@@ -53,7 +53,6 @@
         <a href="snacks.html" class="nav-item">Snacks</a>
         <a href="drinks.html" class="nav-item">Drinks</a>
         <a href="nicotine.html" class="nav-item">Nicotine Products</a>
-        <a href="stamps.html" class="nav-item">Stamps</a>
       </nav>
   </header>
 <!-- Main Content -->
