don doned ojned

--- a/nicotine.html
+++ b/nicotine.html
@@ -50,6 +50,22 @@
         </header>
     </header>
 
+    <main class="main-content">
+        <!-- Age Verification Section -->
+        <section class="age-verification-section">
+            <div class="age-verification-container">
+                <h2>Age Verification</h2>
+                <p>You must be 21 years or older to purchase tobacco products in New Jersey.</p>
+                <div class="calculator">
+                    <div class="input-group">
+                        <input type="date" id="birthdate" class="date-input">
+                        <button id="verify-age" class="verify-button">Verify Age</button>
+                    </div>
+                    <div id="result" class="result-message"></div>
+                </div>
+            </div>
+        </section>
+
     <!-- Main Content -->
     <main class="main-content">
         <!-- Cigarette Brands Section -->
@@ -109,7 +125,7 @@
     </main>
 
 
-    <script src="nicotine.js"></script>
+    <script src="java\nicotine.js"></script>
     <script src="lottery2.js"></script>
 
 </body>
