--- a/snacks.html
+++ b/snacks.html
@@ -64,9 +64,11 @@
     </header>
 
 
-    <h1 class="page-title">SNACKS SELECTION</h1>
-    <p class="description">Choose from our wide variety of delicious snacks. Use the search or filter to find your
-        favorites quickly.</p>
+    <div class="snacks-section container">
+        <div class="snacks-header">
+            <h1>SNACKS SELECTION</h1>
+            <p>Choose from our wide variety of delicious snacks. Use the search or filter to find your favorites quickly.</p>
+        </div>
 
 
     <div class="snacks-container">
