--- a/drinks.html
+++ b/drinks.html
@@ -117,7 +117,7 @@
                 <img src="pfp\coke-zero.png" alt="Coca Cola" class="drink-image" id="coke-image">
             </div>
             <div class="drink-options">
-                <div class="option-box active" data-tooltip="Classic" data-image="pfp\coke-zero.png" data-name="Coca Cola Classic" data-price="$1.00">
+                <div class="option-box active" data-tooltip="Classic" data-image="pfp\coke-zero.png" data-name="Coke Zero" data-price="$1.00">
                     <img src="pfp\coke-zero.png" alt="Classic" class="option-image">
                 </div>
                 <div class="option-box" data-tooltip="Can" data-image="pfp\coke-zero-can.png" data-name="Coke Zero Can" data-price="¢0.75">
@@ -140,10 +140,10 @@
                     <img src="pfp\dr.pepper.png" alt="Pepsi" class="drink-image" id="pepsi-image">
                 </div>
                 <div class="drink-options">
-                    <div class="option-box active" data-tooltip="Original" data-image="pfp\dr.pepper.png" data-name="Dr.Pepper" data-price="$1.00">
+                    <div class="option-box active" data-tooltip="Original" data-image="pfp\dr.pepper.png" data-name="Dr. Pepper" data-price="$1.00">
                         <img src="pfp\dr.pepper.png" alt="Original" class="option-image">
                     </div>
-                    <div class="option-box" data-tooltip="Diet" data-image="pfp\diet dr.pepper.png" data-name="Dr.Pepper Can" data-price="¢0.75">
+                    <div class="option-box" data-tooltip="Diet" data-image="pfp\diet dr.pepper.png" data-name="Dr. Pepper Can" data-price="¢0.75">
                         <img src="pfp\diet dr.pepper.png" alt="Diet" class="option-image">
                     </div>
                    
