--- a/check.html
+++ b/check.html
@@ -21,7 +21,7 @@
   <!-- Header -->
   <header>
     <div class="header-top">
-      <a href="\index.html">
+      <a href="index.html">
         <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
       </a>
       <div class="hours-info">
