--- a/drinks.html
+++ b/drinks.html
@@ -18,7 +18,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-top">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             
