--- a/nicotine.html
+++ b/nicotine.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-top">
-            <a href="..\index.html">
+            <a href="index.html">
                 <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             <div class="hours-info">
