--- a/snacks.html
+++ b/snacks.html
@@ -22,7 +22,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-top">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
 
