--- a/drinks.html
+++ b/drinks.html
@@ -37,7 +37,7 @@
         </div>
         
         <div class="date">
-            <p id="clock">March 25, 2025 | 11:52:31</p>
+            <p id="clock">May 8, 2025 | 8:42:13 AM</p>
         </div>
         
         <!-- Text-Based Navbar -->
@@ -281,7 +281,7 @@
     </footer>
 
     <script src="java\drinks.js"></script>
-    <script src="lottery2.js"></script>
+    <script src="drinks2.js"></script>
 
 </body>
 </html>
