--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             <p>© 2025 Madison Variety. All rights reserved.</p>
         </footer>
         <script src="java\script.js"></script>
+        <script src="lottery2.js"></script>
     </body>
 
 </html>
